@@ -18,10 +18,17 @@ Glossary
       <http://docs.pylonsproject.org/projects/pyramid/1.0/api/config.html#pyramid.config.Configurator>`_
 
    pyramid_jinja2
-      A set of bindings that make templates written for the
-      :term:`Jinja2` templating system work under the :term:`Pyramid` web framework.
+      A set of bindings that make templates written for the :term:`Jinja2`
+      templating system work under the :term:`Pyramid` web framework.
 
    Template Inheritance
-      Allows you to build a base “skeleton” template that contains all the common
-      elements of your site and defines blocks that child templates can override.
+      Allows you to build a base “skeleton” template that contains all the
+      common elements of your site and defines blocks that child templates
+      can override.
       http://jinja.pocoo.org/docs/templates/#template-inheritance
+
+   Asset spec
+       A string representing the path to a directory or file present in a
+       Python module.  See `Understanding Asset Specifications
+       <http://docs.pylonsproject.org/projects/pyramid/current/narr/assets.html#understanding-asset-specifications>`_
+       in the Pyramid documentation for more information.
