@@ -21,10 +21,9 @@ def root_view(request):
 def app(global_settings, **settings):
     config = Configurator(settings=settings)
     config.include('pyramid_jinja2')
-    config.add_route(name='root',
-                     pattern='/',
-                     view=root_view,
-                     renderer='helloworld.jinja2')
+    config.add_route(name='root', pattern='/')
+    config.add_view(root_view,
+                    renderer='helloworld.jinja2')
     config.add_translation_dirs('pyramid_jinja2.demo:locale/')
     return config.make_wsgi_app()
 
